fixed naxbar in dark mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10837,7 +10837,7 @@ aside.content-browser{
         background: #181818;
     }
     .header .navbar-light .navbar-nav .nav-link{
-        color: #181818;
+        color: #fff;
     }
     .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6{
         color: #fff;
